rollback env file setting

--- a/ethvault-validator/Dockerfile
+++ b/ethvault-validator/Dockerfile
@@ -1,4 +1,5 @@
 FROM node:dubnium
+ENV PROFILE=docker
 COPY nodes/validator/package.json /validator/package.json
 RUN cd /validator && yarn
 COPY nodes/validator /validator
