--- a/ethvault-validator/docker-compose.yml
+++ b/ethvault-validator/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - 18985:8984
     networks:
       - br-ethvalidator
+    env_file:
+      - ../.env
 
 networks:
     br-ethvalidator:
@@ -15,4 +17,4 @@ networks:
         ipam:
             driver: default
             config:
-                - subnet: 11.1.1.0/24
+                - subnet: 172.24.127.0/24
