--- a/nodes/validator/package.json
+++ b/nodes/validator/package.json
@@ -22,9 +22,12 @@
     "ethereumjs-wallet": "^0.6.3",
     "ethers": "^5.0.7",
     "express": "^4.17.1",
+    "icon-sdk-js": "^0.0.18",
     "lodash": "^4.17.20",
     "moment": "^2.28.0",
     "readline-sync": "^1.4.10",
+    "request-promise": "^4.2.6",
+    "secp256k1": "^4.0.2",
     "web3": "^1.0.0-beta.37",
     "winston": "^3.1.0",
     "winston-daily-rotate-file": "^2.0.0-rc.1"
