--- a/ethvault-validator/docker-compose.yml
+++ b/ethvault-validator/docker-compose.yml
@@ -1,16 +1,17 @@
 version: '3'
 services:
   validator:
+    extends:
+      file: common.yml
+      service: app
     build:
-      context: ../
-      dockerfile: ./ethvault-validator/Dockerfile
+      args:
+        SETTINGS_FILEPATH: ethvault-validator/settings.js
     ports:
       - 18985:8984
     networks:
       - br-ethvalidator
-    env_file:
-      - ../.env
-
+    
 networks:
     br-ethvalidator:
         driver: bridge
