--- a/nodes/validator/.vscode/tasks.json
+++ b/nodes/validator/.vscode/tasks.json
@@ -7,6 +7,19 @@
             "label": "copy-ethvault-setting",
             "type": "shell",
             "command": "cp ../../ethvault-validator/settings.localhost.js config/docker/settings.js"
+        },
+        {
+            "label": "install-modules",
+            "type": "shell",
+            "command": "yarn"
+        },
+        {
+            "label": "run-all-pretasks",
+            "dependsOrder": "sequence",
+            "dependsOn": [
+                "copy-ethvault-setting",
+                "install-modules"
+            ]
         }
     ]
 }
