--- a/ethvault-validator/docker-compose.yml
+++ b/ethvault-validator/docker-compose.yml
@@ -7,11 +7,12 @@ services:
     build:
       args:
         SETTINGS_FILEPATH: ethvault-validator/settings.js
+        PM2_ECOSYSTEM_FILEPATH: ethvault-validator/pm2.yaml
     ports:
       - 18985:8984
     networks:
       - br-ethvalidator
-    
+
 networks:
     br-ethvalidator:
         driver: bridge
