--- a/nodes/validator/package.json
+++ b/nodes/validator/package.json
@@ -30,6 +30,11 @@
     "secp256k1": "^4.0.2",
     "web3": "^1.0.0-beta.37",
     "winston": "^3.1.0",
-    "winston-daily-rotate-file": "^2.0.0-rc.1"
+    "winston-daily-rotate-file": "^2.0.0-rc.1",
+    "ripple-binary-codec": "^0.2.1",
+    "ripple-keypairs": "^0.11.0",
+    "ripple-lib": "^1.2.3",
+    "bs58": "^4.0.1",
+    "varuint-bitcoin": "^1.1.0"
   }
 }
