change ripple module version

--- a/nodes/validator/package.json
+++ b/nodes/validator/package.json
@@ -28,9 +28,8 @@
     "moment": "^2.28.0",
     "readline-sync": "^1.4.10",
     "request-promise": "^4.2.6",
-    "ripple-binary-codec": "^0.2.1",
-    "ripple-keypairs": "^0.11.0",
-    "ripple-lib": "^1.2.3",
+    "ripple-address-codec": "4.2.3",
+    "ripple-lib": "1.10.0",
     "secp256k1": "^4.0.2",
     "varuint-bitcoin": "^1.1.0",
     "web3": "^1.0.0-beta.37",
