--- a/wemixvault-validator/docker-compose.yml
+++ b/wemixvault-validator/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - br-wemixvalidator
 
 networks:
-    br-tonvalidator:
+    br-wemixvalidator:
         driver: bridge
         ipam:
             driver: default
