--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "abi-decoder": "^2.3.0",
     "bn.js": "^5.1.3",
     "bs58": "^4.0.1",
-    "caver-js": "~1.6.0",
     "crypto-js": "^3.1.9-1",
+    "dotenv": "^16.0.3",
     "elliptic": "^6.4.1",
     "ethereumjs-abi": "^0.6.8",
     "ethereumjs-tx": "^1.3.7",
