--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@stacks/transactions": "^3.3.0",
     "abi-decoder": "^2.3.0",
+    "bignumber.js": "^9.1.2",
     "bn.js": "^5.1.3",
     "bs58": "^4.0.1",
     "crypto-js": "^3.1.9-1",
