Update v2.3.1: support multiple TON indexers (v2, v3)

--- a/.example.env
+++ b/.example.env
@@ -8,15 +8,26 @@ BSC=[]
 CELO=[]
 ETH=[]
 FANTOM=[]
-HARMONY=[]
 HECO=[]
 KLAYTN=[]
 MATIC=[]
 XDAI=[]
 
-#KAS CREDENTIAL
+# KAS CREDENTIAL
 KAS_ACCESS_KEY_ID=
 KAS_SECRET_ACCESS_KEY=
 
-#TON
+# TON API KEYS
+# 📌 REQUIRED: Provide AT LEAST TWO TON API keys below for stable and redundant access.
+# https://toncenter.com/
 TON_API_KEY=
+
+# https://www.quicknode.com/
+QUICKNODE_API_KEY=
+
+# https://chainstack.com/
+CHAINSTACK_API_KEY=
+
+# https://getblock.io/
+GETBLOCK_JSON_RPC_API_KEY=
+GETBLOCK_INDEXER_V3_API_KEY=
