--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "orbit-bridge-validators",
-  "version": "2.0.1",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -35,8 +35,9 @@
     "ton": "^12.0.0",
     "tonweb": "^0.0.52",
     "varuint-bitcoin": "^1.1.0",
-    "web3": "^1.0.0-beta.37",
+    "web3": "1.8.1",
     "winston": "^3.1.0",
-    "winston-daily-rotate-file": "^2.0.0-rc.1"
+    "winston-daily-rotate-file": "^2.0.0-rc.1",
+    "tonweb-latest": "npm:tonweb@^0.0.66"
   }
 }
